--- a/database.yaml
+++ b/database.yaml
@@ -5,6 +5,7 @@ non_pii_keys:
     - location
     - location1
     - location2
+    - location2
     - location3
     - location4
     justifications:
