--- a/database.yaml
+++ b/database.yaml
@@ -4,8 +4,10 @@ non_pii_keys:
     - city
     - city
     - city
+    - city
     - city2
     - location
+    - location2
     - location2
     - location1
     - location2
